--- a/index.html
+++ b/index.html
@@ -54,16 +54,13 @@
 <main id="dynamic-content">
     <section class="hero">
         <div id="conteudo_de_destaque">
-            <p style="text-align:center; padding-top:100px; color:var(--text-muted);">Iniciando portal...</p>
+            <p style="text-align:center; padding-top:100px; color:var(--text-muted);"></p>
         </div>
     </section>
 </main>
 
 <footer>
-    <div style="max-width:var(--container-w); margin:0 auto;">
-        <a href="./index.html" class="logo" style="font-size:20px;">AniGeek<span>News</span></a>
-        <p style="margin-top:10px;">© 2025 AniGeekNews. Jornalismo Geek Independente.</p>
-    </div>
+   
 </footer>
 
 <!-- Scripts principais -->
