--- a/secoes/analises.html
+++ b/secoes/analises.html
@@ -42,4 +42,45 @@
   </div>
 
   <script type="module" src="./modulos/modulos_analises/analises_principal.js"></script>
+
+  <style>
+    :root {
+      --card-bg: #ffffff;
+      --border: #e0e0e0;
+      --bg: #f8f9fa;
+      --text-main: #121212;
+      --text-muted: #555;
+      --container-w: 1200px;
+      --radius: 12px;
+    }
+
+    body.dark-mode {
+      --card-bg: #1a1a1a;
+      --border: #333;
+      --bg: #252525;
+      --text-main: #fff;
+      --text-muted: #bbb;
+    }
+
+    /* Estilos de Interface */
+    .capa-editorial-block { width: 100%; padding: 0 16px; margin: 0 auto 32px auto; max-width: var(--container-w); }
+    .capa-content-inner { background: var(--card-bg); border: 1px solid var(--border); border-radius: var(--radius); padding: 30px; text-align: center; }
+    .capa-title { font-size: clamp(1.8rem, 5vw, 2.5rem); font-weight: 900; color: var(--text-main); margin-bottom: 15px; }
+    .capa-desc { max-width: 700px; margin: 0 auto 20px auto; color: var(--text-muted); line-height: 1.6; }
+    
+    .subcat-tag { background: var(--bg); color: var(--text-main); padding: 6px 15px; border-radius: 50px; font-size: 0.85rem; font-weight: 700; display: inline-block; margin: 5px; border: 1px solid var(--border); }
+    
+    .btn-paginacao-geek { background: var(--card-bg); border: 1px solid var(--border); color: var(--text-main); padding: 12px 25px; border-radius: 50px; cursor: pointer; font-weight: 700; transition: 0.3s; }
+    .btn-paginacao-geek:hover { background: var(--text-main); color: var(--card-bg); }
+
+    /* Toast */
+    #toast-copiado { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: #333; color: white; padding: 10px 20px; border-radius: 30px; opacity: 0; transition: 0.3s; z-index: 10000; pointer-events: none; }
+    #toast-copiado.mostrar { opacity: 1; }
+
+    /* Estilos do Feed de Análises */
+    .destaque-secao { background: var(--card-bg); border: 1px solid var(--border); border-radius: var(--radius); margin-bottom: 40px; overflow: hidden; max-width: var(--container-w); margin-left: auto; margin-right: auto; }
+    .destaque-padding { padding: 25px; }
+    .destaque-titulo { font-size: 1.8rem; font-weight: 800; margin: 10px 0; color: var(--text-main); line-height: 1.2; }
+    .destaque-media iframe { width: 100%; aspect-ratio: 16/9; border: none; display: block; }
+  </style>
 </div>
