--- a/secoes/analises.html
+++ b/secoes/analises.html
@@ -1,5 +1,6 @@
 <div class="destaque-wrapper">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="./modulos/modulos_analises/analises_estilo.css">
 
   <div id="capa-editorial" class="capa-editorial-block">
     <div class="capa-content-inner">
@@ -13,8 +14,6 @@
     <p style="text-align:center; padding:100px; color:var(--text-muted); opacity:0.5;">SINCRONIZANDO ANÁLISES...</p>
   </div>
   
-  </div>
-
   <div id="toast-copiado">Link copiado!</div>
 
   <div id="modal-comentarios-geek" class="modal-geek-overlay">
