--- a/secoes/analises.html
+++ b/secoes/analises.html
@@ -13,6 +13,8 @@
   <div id="container-principal">
     <p style="text-align:center; padding:100px; color:var(--text-muted); opacity:0.5;">SINCRONIZANDO ANÁLISES...</p>
   </div>
+
+  <div id="novo-pagination-modulo"></div>
   
   <div id="toast-copiado">Link copiado!</div>
 
@@ -72,7 +74,7 @@
     #toast-copiado { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: #333; color: white; padding: 10px 20px; border-radius: 30px; opacity: 0; transition: 0.3s; z-index: 10000; pointer-events: none; }
     #toast-copiado.mostrar { opacity: 1; }
 
-    /* Estilos do Feed de Análises (Ajustados para o seu layout) */
+    /* Estilos do Feed de Análises */
     .destaque-secao { background: var(--card-bg); border: 1px solid var(--border); border-radius: var(--radius); margin-bottom: 40px; overflow: hidden; max-width: var(--container-w); margin-left: auto; margin-right: auto; }
     .destaque-padding { padding: 25px; }
     .destaque-titulo { font-size: 1.8rem; font-weight: 800; margin: 10px 0; color: var(--text-main); line-height: 1.2; }
