--- a/secoes/analises.html
+++ b/secoes/analises.html
@@ -67,14 +67,13 @@
     
     .subcat-tag { background: var(--bg); color: var(--text-main); padding: 6px 15px; border-radius: 50px; font-size: 0.85rem; font-weight: 700; display: inline-block; margin: 5px; border: 1px solid var(--border); }
     
-    .btn-paginacao-geek { background: var(--card-bg); border: 1px solid var(--border); color: var(--text-main); padding: 12px 25px; border-radius: 50px; cursor: pointer; font-weight: 700; transition: 0.3s; }
+    .btn-paginacao-geek { background: var(--card-bg); border: 1px solid var(--border); color: var(--text-main); padding: 12px 25px; border-radius: 50px; cursor: pointer; font-weight: 700; transition: 0.3s; margin: 20px auto; display: block; }
     .btn-paginacao-geek:hover { background: var(--text-main); color: var(--card-bg); }
 
     /* Toast */
     #toast-copiado { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: #333; color: white; padding: 10px 20px; border-radius: 30px; opacity: 0; transition: 0.3s; z-index: 10000; pointer-events: none; }
     #toast-copiado.mostrar { opacity: 1; }
 
-    /* Estilos do Feed de Análises */
     .destaque-secao { background: var(--card-bg); border: 1px solid var(--border); border-radius: var(--radius); margin-bottom: 40px; overflow: hidden; max-width: var(--container-w); margin-left: auto; margin-right: auto; }
     .destaque-padding { padding: 25px; }
     .destaque-titulo { font-size: 1.8rem; font-weight: 800; margin: 10px 0; color: var(--text-main); line-height: 1.2; }
